HAL and pagination added