@@ -1,7 +1,6 @@
 package rest_with_spring_boot_and_java.integrationtests.controllers.withyaml;
 
 import com.fasterxml.jackson.core.JsonProcessingException;
-import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.DeserializationFeature;
 import com.fasterxml.jackson.dataformat.yaml.YAMLMapper;
 import io.restassured.builder.RequestSpecBuilder;
@@ -12,8 +11,10 @@ import io.restassured.filter.log.ResponseLoggingFilter;
 import io.restassured.specification.RequestSpecification;
 import org.junit.jupiter.api.*;
 import org.springframework.boot.test.context.SpringBootTest;
+import org.springframework.http.MediaType;
 import rest_with_spring_boot_and_java.config.TestConfigs;
 import rest_with_spring_boot_and_java.integrationtests.dto.PersonDTO;
+import rest_with_spring_boot_and_java.integrationtests.dto.wrapper.xml.PagedModelPerson;
 import rest_with_spring_boot_and_java.integrationtests.testcontainers.AbstractIntegrationTest;
 
 import java.util.List;
@@ -45,7 +46,6 @@ class PersonControllerYamlTest extends AbstractIntegrationTest {
                 .build();
     }
 
-    // Helper para configurar RestAssured para enviar YAML corretamente
     private RequestSpecification yamlRequest() {
         return given()
                 .config(RestAssuredConfig.config()
@@ -76,12 +76,6 @@ class PersonControllerYamlTest extends AbstractIntegrationTest {
         person = objectMapper.readValue(content, PersonDTO.class);
 
         assertNotNull(person.getId());
-        assertNotNull(person.getFirstName());
-        assertNotNull(person.getLastName());
-        assertNotNull(person.getAddress());
-        assertNotNull(person.getGender());
-        assertTrue(person.getId() > 0);
-
         assertEquals("Linus", person.getFirstName());
         assertEquals("Torvalds", person.getLastName());
         assertEquals("Helsinki", person.getAddress());
@@ -111,17 +105,7 @@ class PersonControllerYamlTest extends AbstractIntegrationTest {
         person = objectMapper.readValue(content, PersonDTO.class);
 
         assertNotNull(person.getId());
-        assertNotNull(person.getFirstName());
-        assertNotNull(person.getLastName());
-        assertNotNull(person.getAddress());
-        assertNotNull(person.getGender());
-        assertTrue(person.getId() > 0);
-
-        assertEquals("Linus", person.getFirstName());
         assertEquals("Benedict Torvalds", person.getLastName());
-        assertEquals("Helsinki", person.getAddress());
-        assertEquals("Male", person.getGender());
-        assertTrue(person.getEnabled());
     }
 
     @Test
@@ -132,7 +116,7 @@ class PersonControllerYamlTest extends AbstractIntegrationTest {
                 .accept("application/yaml")
                 .pathParam("id", person.getId())
                 .when()
-                .patch("{id}")
+                .get("{id}")
                 .then()
                 .statusCode(200)
                 .contentType("application/yaml")
@@ -143,17 +127,7 @@ class PersonControllerYamlTest extends AbstractIntegrationTest {
         person = objectMapper.readValue(content, PersonDTO.class);
 
         assertNotNull(person.getId());
-        assertNotNull(person.getFirstName());
-        assertNotNull(person.getLastName());
-        assertNotNull(person.getAddress());
-        assertNotNull(person.getGender());
-        assertTrue(person.getId() > 0);
-
-        assertEquals("Linus", person.getFirstName());
         assertEquals("Benedict Torvalds", person.getLastName());
-        assertEquals("Helsinki", person.getAddress());
-        assertEquals("Male", person.getGender());
-        assertFalse(person.getEnabled());
     }
 
     @Test
@@ -175,16 +149,6 @@ class PersonControllerYamlTest extends AbstractIntegrationTest {
         person = objectMapper.readValue(content, PersonDTO.class);
 
         assertNotNull(person.getId());
-        assertNotNull(person.getFirstName());
-        assertNotNull(person.getLastName());
-        assertNotNull(person.getAddress());
-        assertNotNull(person.getGender());
-        assertTrue(person.getId() > 0);
-
-        assertEquals("Linus", person.getFirstName());
-        assertEquals("Benedict Torvalds", person.getLastName());
-        assertEquals("Helsinki", person.getAddress());
-        assertEquals("Male", person.getGender());
         assertFalse(person.getEnabled());
     }
 
@@ -201,21 +165,23 @@ class PersonControllerYamlTest extends AbstractIntegrationTest {
 
     @Test
     @Order(6)
-    void findAllTest() throws JsonProcessingException {
-        var content = yamlRequest()
-                .accept("application/yaml")
+    void findAllTest() throws Exception {
+        String yaml = given(specification)
+                .accept(MediaType.APPLICATION_YAML_VALUE)
+                .queryParams("page", 3, "size", 12, "direction", "asc")
                 .when()
                 .get()
                 .then()
                 .statusCode(200)
-                .contentType("application/yaml")
+                .contentType(MediaType.APPLICATION_YAML_VALUE)
                 .extract()
                 .body()
                 .asString();
 
-        List<PersonDTO> list = objectMapper.readValue(content, new TypeReference<List<PersonDTO>>() {});
+        PagedModelPerson wrapper = objectMapper.readValue(yaml, PagedModelPerson.class);
+        List<PersonDTO> list = wrapper.getContent();
 
-        person = list.get(0);
+        person = list.getFirst();
 
         assertNotNull(person.getId());
         assertNotNull(person.getFirstName());
@@ -224,11 +190,11 @@ class PersonControllerYamlTest extends AbstractIntegrationTest {
         assertNotNull(person.getGender());
         assertTrue(person.getId() > 0);
 
-        assertEquals("John", person.getFirstName());
-        assertEquals("Doe", person.getLastName());
-        assertEquals("123 Main St, New York, NY", person.getAddress());
-        assertEquals("male", person.getGender());
-        assertTrue(person.getEnabled());
+        assertEquals("Allin", person.getFirstName());
+        assertEquals("Otridge", person.getLastName());
+        assertEquals("09846 Independence Center", person.getAddress());
+        assertEquals("Male", person.getGender());
+        assertFalse(person.getEnabled());
 
         person = list.get(1);
 
@@ -239,11 +205,11 @@ class PersonControllerYamlTest extends AbstractIntegrationTest {
         assertNotNull(person.getGender());
         assertTrue(person.getId() > 0);
 
-        assertEquals("Jane", person.getFirstName());
-        assertEquals("Smith", person.getLastName());
-        assertEquals("456 Oak Ave, San Francisco, CA", person.getAddress());
-        assertEquals("female", person.getGender());
-        assertTrue(person.getEnabled());
+        assertEquals("Allin", person.getFirstName());
+        assertEquals("Emmot", person.getLastName());
+        assertEquals("7913 Lindbergh Way", person.getAddress());
+        assertEquals("Male", person.getGender());
+        assertFalse(person.getEnabled());
 
         person = list.get(5);
 
@@ -254,10 +220,10 @@ class PersonControllerYamlTest extends AbstractIntegrationTest {
         assertNotNull(person.getGender());
         assertTrue(person.getId() > 0);
 
-        assertEquals("Laura", person.getFirstName());
-        assertEquals("Wilson", person.getLastName());
-        assertEquals("987 Cedar Ln, Denver, CO", person.getAddress());
-        assertEquals("female", person.getGender());
+        assertEquals("Alphonso", person.getFirstName());
+        assertEquals("Eddisforth", person.getLastName());
+        assertEquals("485 Dayton Avenue", person.getAddress());
+        assertEquals("Male", person.getGender());
         assertTrue(person.getEnabled());
     }
 
